# yt-to-anki

./: .gitignore  .pre-commit-config.yaml  README.html  README.md  __init__.py  client_youtube.py  constants.py  main.py  models.py  pyproject.toml  ruff.toml  subtitles_extractor.py  tasks.py  ui.py  worker.py  yt_main.py  yt_parse.py
.github/workflows/: ci-linux-ubuntu-latest.yml  ci-linux-ubuntu-latest.yml 
tests/: test_subtitles.py  test_utils.py
tests/subtitle_extractor/parsing/01_parsing/: subtitles.en.vtt
tests/subtitle_extractor/parsing/02_autogen/: subtitles.en.vtt
tests/unit/: test_subtitles.py  test_utils.py
tests/unit/subtitles_extractor/optimizing/01_optimizing_subtitles/: subtitles.en.vtt  test_01_optimizing_subtitles.py
tests/unit/subtitles_extractor/parsing/01_parsing_subtitles/: test_01_parsing_subtitles.py
tests/unit/subtitles_extractor/parsing/02_autogen/: test_02_autogen.py
tests/unit/youtube_client/01_parsing_subtitles/: test_01_parsing_subtitles.py
tests/unit/youtube_subtitles_extractor/01_parsing_subtitles/: test_01_parsing_subtitles.py
ytanki/: __init__.py  client_youtube.py  constants.py  errors.py  ffmpeg.py  gui.py  gui.ui  main.py  models.py  subtitles_extractor.py  ui.py  utils.py  worker.py
ytsrs/: __init__.py  client_youtube.py  errors.py  main.py  subtitles_extractor.py  ui.py  utils.py  worker.py
