[tool.poetry]
name = "yt2srs"
version = "0.1.0"
description = "Simple anki addon to generate decks from youtube videos"
authors = ["Kamui <fin-kamui@pm.me>"]
license = "GPL-v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2023.1.6"
webvtt-py = "^0.4.6"

[tool.poetry.group.dev.dependencies]
invoke = "^2.0.0"
black = "^23.1.0"
pytest = "^7.2.1"
ruff = "^0.0.246"
mypy = "^1.0.0"
aqt = {extras = ["qt5"], version = "^2.1.57"}
coverage = "^7.1.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
