[tool.poetry]
name = "yt-to-anki"
version = "0.1.0"
description = "Simple anki addon to generate decks from youtube videos"
authors = ["Kamui <fin-kamui@pm.me>"]
license = "GPL-v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
webvtt-py = "^0.4.6"
yt-dlp = {url = "https://github.com/ytdl-patched/yt-dlp/archive/refs/tags/2023.02.17.334.tar.gz"}

[tool.poetry.group.dev.dependencies]
invoke = "^2.0.0"
black = "^23.1.0"
pytest = "^7.2.1"
ruff = "^0.0.246"
mypy = "^1.0.0"
aqt = {extras = ["qt5"], version = "^2.1.57"}
coverage = "^7.1.0"
pre-commit = "^3.0.4"
markdown2 = "^2.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
