[tool.poetry]
name = "yt-to-anki"
version = "1.0.0"
description = "Simple anki addon to generate decks from youtube videos"
authors = ["Kamui <fin-kamui@pm.me>"]
license = "GPL-v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
webvtt-py = "^0.4.6"
yt-dlp = "^2023.7.6"

[tool.poetry.group.dev.dependencies]
aqt = {extras = ["qt5"], version = "==2.1.54"}
invoke = "^2.0.0"
black = "^23.1.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pre-commit = "^3.0.4"
markdown2 = "^2.4.8"
pyright = "^1.1.294"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["ytanki", "tests"]
exclude = ["**/__pycache__", "ytanki/gui.py"]
reportOptionalMemberAccess = false
